DT-T2312 fix width for .fields-container. There was issue on mobile

--- a/src/app/field-editor/components/field-editor/field-editor.component.scss
+++ b/src/app/field-editor/components/field-editor/field-editor.component.scss
@@ -18,6 +18,7 @@
   .fields-container {
     display: flex;
     flex-grow: 1;
+    width: 100%;
   }
 }
 
